apps/sia-helpers/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sia-helpers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sia-helpers
  template:
    metadata:
      labels:
        app: sia-helpers
    spec:
      containers:
        - name: sia-helpers
          image: ghcr.io/veirt/sia-helpers:latest
          ports:
            - containerPort: 33125
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              subPath: sia-helpers
            - name: timezone
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: timezone
          hostPath:
            path: /etc/localtime
            type: File
