apps/sia-helpers/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sia-helpers-service
spec:
  selector:
    app: sia-helpers
  ports:
    - protocol: TCP
      port: 33125
      targetPort: 33125
  type: ClusterIP
