apps/sia-helpers/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sia-helpers-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: sia-helpers.veirt.web.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sia-helpers-service
                port:
                  number: 33125
  tls:
    - hosts:
        - sia-helpers.veirt.web.id
      secretName: sia-helpers-tls
